--- a/examples/github/tokens/tokens.css
+++ b/examples/github/tokens/tokens.css
@@ -95,26 +95,28 @@
   --color-yellow-8: #4d2d00;
   --color-yellow-9: #3b2300;
   --color-white: #ffffff;
-  --icon-alert-16: url('https://raw.githubusercontent.com/primer/octicons/main/icons/alert-16.svg');
-  --icon-alert-24: url('https://raw.githubusercontent.com/primer/octicons/main/icons/alert-24.svg');
-  --spacing-spacer-0: 0;
-  --spacing-spacer-1: 4px;
-  --spacing-spacer-2: 8px;
-  --spacing-spacer-3: 16px;
-  --spacing-spacer-4: 24px;
-  --spacing-spacer-5: 32px;
-  --spacing-spacer-6: 40px;
-  --text-size-f00: 32px;
-  --text-size-f0: 32px;
-  --text-size-f1: 26px;
-  --text-size-f2: 22px;
-  --text-size-f3: 16px;
-  --text-size-f4: 16px;
-  --text-size-f5: 14px;
-  --text-size-f6: 12px;
-  --text-line-height-default: 1.5;
-  --text-line-height-condensed: 1.25;
-  --text-line-height-condensed-ultra: 1;
+  --icon-alert-16: alert-16;
+  --icon-alert-16-fill: alert-16-fill;
+  --icon-alert-24: alert-24;
+  --icon-archive-16: archive-16;
+  --icon-archive-24: archive-24;
+  --icon-arrow-both-16: arrow-both-16;
+  /* Typography */
+
+  --type-family-system: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --type-family-monospace: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  --type-family-display: InterUI, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif;
+  --type-size-f00: 32;
+  --type-size-f0: 32;
+  --type-size-f1: 26;
+  --type-size-f2: 22;
+  --type-size-f3: 16;
+  --type-size-f4: 16;
+  --type-size-f5: 14;
+  --type-size-f6: 12;
+  --type-line-height-default: 1.5;
+  --type-line-height-condensed: 1.25;
+  --type-line-height-condensed-ultra: 1;
 }
 
 .theme--light {
@@ -308,109 +310,109 @@
 }
 
 .theme--light-low-contrast {
-  --color-black: #1b1f24;
-  --color-blue-0: #ddf4ff;
-  --color-blue-1: #b6e3ff;
-  --color-blue-2: #80ccff;
-  --color-blue-3: #54aeff;
-  --color-blue-4: #218bff;
-  --color-blue-5: #0969da;
-  --color-blue-6: #0550ae;
-  --color-blue-7: #033d8b;
-  --color-blue-8: #0a3069;
-  --color-blue-9: #002155;
-  --color-coral-0: #FFF0EB;
-  --color-coral-1: #FFD6CC;
-  --color-coral-2: #FFB4A1;
-  --color-coral-3: #FD8C73;
-  --color-coral-4: #EC6547;
-  --color-coral-5: #C4432B;
-  --color-coral-6: #9E2F1C;
-  --color-coral-7: #801F0F;
-  --color-coral-8: #691105;
-  --color-coral-9: #510901;
-  --color-gray-0: #f6f8fa;
-  --color-gray-1: #eaeef2;
-  --color-gray-2: #d0d7de;
-  --color-gray-3: #afb8c1;
-  --color-gray-4: #8c959f;
-  --color-gray-5: #6e7781;
-  --color-gray-6: #57606a;
-  --color-gray-7: #424a53;
-  --color-gray-8: #32383f;
-  --color-gray-9: #24292f;
-  --color-green-0: #dafbe1;
-  --color-green-1: #aceebb;
-  --color-green-2: #6fdd8b;
-  --color-green-3: #4ac26b;
-  --color-green-4: #2da44e;
-  --color-green-5: #1a7f37;
-  --color-green-6: #116329;
-  --color-green-7: #044f1e;
-  --color-green-8: #003d16;
-  --color-green-9: #002d11;
-  --color-orange-0: #fff1e5;
-  --color-orange-1: #ffd8b5;
-  --color-orange-2: #ffb77c;
-  --color-orange-3: #fb8f44;
-  --color-orange-4: #e16f24;
-  --color-orange-5: #bc4c00;
-  --color-orange-6: #953800;
-  --color-orange-7: #762c00;
-  --color-orange-8: #5c2200;
-  --color-orange-9: #471700;
-  --color-pink-0: #ffeff7;
-  --color-pink-1: #ffd3eb;
-  --color-pink-2: #ffadda;
-  --color-pink-3: #ff80c8;
-  --color-pink-4: #e85aad;
-  --color-pink-5: #bf3989;
-  --color-pink-6: #99286e;
-  --color-pink-7: #772057;
-  --color-pink-8: #611347;
-  --color-pink-9: #4d0336;
-  --color-purple-0: #fbefff;
-  --color-purple-1: #ecd8ff;
-  --color-purple-2: #d8b9ff;
-  --color-purple-3: #c297ff;
-  --color-purple-4: #a475f9;
-  --color-purple-5: #8250df;
-  --color-purple-6: #6639ba;
-  --color-purple-7: #512a97;
-  --color-purple-8: #3e1f79;
-  --color-purple-9: #2e1461;
-  --color-red-0: #FFEBE9;
-  --color-red-1: #ffcecb;
-  --color-red-2: #ffaba8;
-  --color-red-3: #ff8182;
-  --color-red-4: #fa4549;
-  --color-red-5: #cf222e;
-  --color-red-6: #a40e26;
-  --color-red-7: #82071e;
-  --color-red-8: #660018;
-  --color-red-9: #4c0014;
-  --color-yellow-0: #fff8c5;
-  --color-yellow-1: #fae17d;
-  --color-yellow-2: #eac54f;
-  --color-yellow-3: #d4a72c;
-  --color-yellow-4: #bf8700;
-  --color-yellow-5: #9a6700;
-  --color-yellow-6: #7d4e00;
-  --color-yellow-7: #633c01;
-  --color-yellow-8: #4d2d00;
-  --color-yellow-9: #3b2300;
-  --color-white: #ffffff;
+  --color-black: undefined;
+  --color-blue-0: undefined;
+  --color-blue-1: undefined;
+  --color-blue-2: undefined;
+  --color-blue-3: undefined;
+  --color-blue-4: undefined;
+  --color-blue-5: undefined;
+  --color-blue-6: undefined;
+  --color-blue-7: undefined;
+  --color-blue-8: undefined;
+  --color-blue-9: undefined;
+  --color-coral-0: undefined;
+  --color-coral-1: undefined;
+  --color-coral-2: undefined;
+  --color-coral-3: undefined;
+  --color-coral-4: undefined;
+  --color-coral-5: undefined;
+  --color-coral-6: undefined;
+  --color-coral-7: undefined;
+  --color-coral-8: undefined;
+  --color-coral-9: undefined;
+  --color-gray-0: undefined;
+  --color-gray-1: undefined;
+  --color-gray-2: undefined;
+  --color-gray-3: undefined;
+  --color-gray-4: undefined;
+  --color-gray-5: undefined;
+  --color-gray-6: undefined;
+  --color-gray-7: undefined;
+  --color-gray-8: undefined;
+  --color-gray-9: undefined;
+  --color-green-0: undefined;
+  --color-green-1: undefined;
+  --color-green-2: undefined;
+  --color-green-3: undefined;
+  --color-green-4: undefined;
+  --color-green-5: undefined;
+  --color-green-6: undefined;
+  --color-green-7: undefined;
+  --color-green-8: undefined;
+  --color-green-9: undefined;
+  --color-orange-0: undefined;
+  --color-orange-1: undefined;
+  --color-orange-2: undefined;
+  --color-orange-3: undefined;
+  --color-orange-4: undefined;
+  --color-orange-5: undefined;
+  --color-orange-6: undefined;
+  --color-orange-7: undefined;
+  --color-orange-8: undefined;
+  --color-orange-9: undefined;
+  --color-pink-0: undefined;
+  --color-pink-1: undefined;
+  --color-pink-2: undefined;
+  --color-pink-3: undefined;
+  --color-pink-4: undefined;
+  --color-pink-5: undefined;
+  --color-pink-6: undefined;
+  --color-pink-7: undefined;
+  --color-pink-8: undefined;
+  --color-pink-9: undefined;
+  --color-purple-0: undefined;
+  --color-purple-1: undefined;
+  --color-purple-2: undefined;
+  --color-purple-3: undefined;
+  --color-purple-4: undefined;
+  --color-purple-5: undefined;
+  --color-purple-6: undefined;
+  --color-purple-7: undefined;
+  --color-purple-8: undefined;
+  --color-purple-9: undefined;
+  --color-red-0: undefined;
+  --color-red-1: undefined;
+  --color-red-2: undefined;
+  --color-red-3: undefined;
+  --color-red-4: undefined;
+  --color-red-5: undefined;
+  --color-red-6: undefined;
+  --color-red-7: undefined;
+  --color-red-8: undefined;
+  --color-red-9: undefined;
+  --color-yellow-0: undefined;
+  --color-yellow-1: undefined;
+  --color-yellow-2: undefined;
+  --color-yellow-3: undefined;
+  --color-yellow-4: undefined;
+  --color-yellow-5: undefined;
+  --color-yellow-6: undefined;
+  --color-yellow-7: undefined;
+  --color-yellow-8: undefined;
+  --color-yellow-9: undefined;
+  --color-white: undefined;
 }
 
 @media (min-width: 600px) {
   :root {
-    --text-size-f00: 48px;
-    --text-size-f0: 40px;
-    --text-size-f1: 32px;
-    --text-size-f2: 24px;
-    --text-size-f3: 20px;
-    --text-size-f4: 16px;
-    --text-size-f5: 14px;
-    --text-size-f6: 12px;
+    --type-size-f00: 48;
+    --type-size-f0: 40;
+    --type-size-f1: 32;
+    --type-size-f2: 24;
+    --type-size-f3: 20;
+    --type-size-f4: 16;
+    --type-size-f5: 14;
+    --type-size-f6: 12;
   }
 }
