--- a/www/src/components/CobaltSm.astro
+++ b/www/src/components/CobaltSm.astro
@@ -5,13 +5,13 @@
     align-items: flex-end;
     border: 2px solid $color__white;
     display: flex;
-    font-size: 1.25em;
+    font-size: 1.25rem;
     font-weight: 500;
-    line-height: 0.75;
-    height: 2.5em;
+    line-height: 0.8;
+    height: 3rem;
     justify-content: flex-end;
-    padding: 0.25em;
-    width: 2.5em;
+    padding: 0.2em;
+    width: 3rem;
   }
 </style>
 
