--- a/www/src/styles/_base.scss
+++ b/www/src/styles/_base.scss
@@ -25,8 +25,21 @@ h6 {
   font-weight: 600;
 }
 
+a {
+  color: currentColor;
+}
+
 p {
   margin: 1.5em 0;
+}
+
+menu {
+  margin: 0;
+  padding: 0;
+}
+
+figure {
+  margin: 0;
 }
 
 b,
