--- a/www/src/components/Nav.astro
+++ b/www/src/components/Nav.astro
@@ -1,8 +1,6 @@
 ---
+import Icons from './Icons.astro';
 let currentPage = Astro.request.url.pathname;
-
-const stars = (await fetch('https://api.github.com/repos/drwpow/cobalt-ui')
-  .then((res) => res.json())).stargazers_count;
 ---
 
 <style lang="scss">
@@ -14,15 +12,27 @@ const stars = (await fetch('https://api.github.com/repos/drwpow/cobalt-ui')
 
   a {
     color: white;
-    padding: 1em;
+    padding: 1rem;
+  }
+
+  .github {
+    display: inline-block;
+    padding: 0.75rem 1rem;
+  }
+
+  .github-icon {
+    height: 1.5em;
+    width: 1.5em;
+    vertical-align: 25%;
   }
 </style>
 
+<Icons />
 <nav>
   <a href="/" aria-current={currentPage === '/' ? 'page' : undefined}>Introduction</a>
   <a href="/editor" aria-current={currentPage === '/editor' ? 'page' : undefined}>Editor</a>
   <a href="/docs" aria-current={currentPage === '/docs' ? 'page' : undefined}>Documentation</a>
-  <a class="github-badge" href="https://github.com/drwpow/cobalt-ui">
-    {stars}
+  <a class="github" href="https://github.com/drwpow/cobalt-ui">
+    <svg class="github-icon"><use xlink:href="#github"></use></svg>
   </a>
 </nav>
