--- a/www/src/styles/_base.scss
+++ b/www/src/styles/_base.scss
@@ -38,8 +38,26 @@ menu {
   padding: 0;
 }
 
+fieldset {
+  appearance: none;
+  border: 0;
+  padding: 0;
+  margin: 0;
+}
+
+legend {
+  appearance: none;
+  font-size: inherit;
+  font-weight: 500;
+  padding: 0;
+}
+
 figure {
   margin: 0;
+}
+
+input {
+  min-width: 0;
 }
 
 b,
