--- a/www/src/styles/_utils.scss
+++ b/www/src/styles/_utils.scss
@@ -2,7 +2,8 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 75em;
-  padding: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   width: 100%;
 }
 
